<resources>
    <string name="app_name">Cakie</string>
    <string name="masuk">

MASUK
</string>
    <string name="daftar_seka">

DAFTAR SEKARANG
</string>
    <string name="masukan_dat">

Masukan Data Diri Anda
</string>
    <string name="daftar">

Daftar
</string>
    <!-- strings.xml -->
    <string name="beranda">

Beranda
</string>
    <string name="penjualan">

Penjualan
</string>
    <string name="des_2019">

19 Des 2019
</string>
    <string name="rp_150_000">

Rp. 150.000
</string>
    <string name="kelola_jaja">

Kelola Jajanan Pasar
</string>

    <string name="jajanan_pas">

Jajanan Pasar masih kosong
</string>

    <string name="klik_tambah">

Klik Tambah untuk menambahkan\nJajanan Pasar
</string>

    <string name="tambah">

Tambah
</string>
    <string name="nama_produk">
        Nama Produk
    </string>
    <string name="kelola_jajan">

Kelola Jajanan Pasar
</string>
    <string name="bubur_kacan">

Bubur kacang ijo
</string>
    <string name="rp_15_000">

Rp.15.000

</string>
    <string name="some_id">

    1
    </string>
    <string name="tambah2">

Tambah
</string>
    <string name="metode_baya">

Metode Bayar :
</string>
    <string name="tunai">

TUNAI
</string>
    <string name="kue_leker">

Kue Leker
</string>
    <string name="total">

TOTAL
</string>

    <string name="bayar">

Bayar
</string>
    <string name="kembalian">

Kembalian
</string>
    <string name="lunas">

LUNAS
</string>


    <string name="title_activity_kedelapan">KedelapanActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Helda Ludya</string>
    <string name="nav_header_subtitle">heldaludya5@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_gallery">Transaksi</string>
    <string name="menu_slideshow">Riwayat Transaksi</string>
    <string name="menu_tools">Laporan</string>
    <string name="menu_share">Pengaturan</string>
    <string name="menu_send">Send</string>

</resources>


