<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_7"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorAccent"
    >

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary" />
    <Button
        android:id="@+id/back"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignStart="@+id/rectangle_4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_arrow_back_black_24dp" />
    <TextView
        android:id="@+id/tambah"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/tambah2"
        android:textAppearance="@style/tambah2"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/metode_baya"
        android:layout_width="120dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:text="@string/metode_baya"
        android:textAppearance="@style/metode_baya"
        android:gravity="top"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="66dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        android:text="TUNAI" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="69dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:text="DEBIT" />

    <TextView
        android:id="@+id/bubur_kacan"
        android:layout_width="106dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:text="@string/bubur_kacan"
        android:textAppearance="@style/bubur_kacan"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/kue_leker"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="257dp"
        android:text="@string/kue_leker"
        android:textAppearance="@style/kue_leker"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/total"
        android:layout_width="43dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="331dp"
        android:text="@string/total"
        android:textAppearance="@style/total"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/bayar"
        android:layout_width="36dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="366dp"
        android:text="@string/bayar"
        android:textAppearance="@style/bayar"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/kembalian"
        android:layout_width="66dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="401dp"
        android:text="@string/kembalian"
        android:textAppearance="@style/kembalian"
        android:gravity="top"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/radioButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="434dp"
        android:background="@color/colorPrimary"
        android:text="TAMBAH" />





</RelativeLayout>