<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_5"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    >

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/back_2"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/kelola_jaja"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/kelola_jaja"
        android:textAppearance="@style/kelola_jaja"
        android:gravity="top"
        />

    <Button
        android:id="@+id/jajan"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/rectangle_5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="138dp"
        android:background="@drawable/image10kelola" />

    <TextView
        android:id="@+id/jajanan_pas"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="319dp"
        android:gravity="top"
        android:text="@string/jajanan_pas"
        android:textAppearance="@style/jajanan_pas" />

    <TextView
        android:id="@+id/klik_tambah"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="340dp"
        android:gravity="center_horizontal|top"
        android:text="@string/klik_tambah"
        android:textAppearance="@style/klik_tambah" />

    <Button
    android:id="@+id/tambah2"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_alignTop="@id/jajan"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="434dp"
    android:text="TAMBAH"
    android:background="#C5F3C7"/>



    <!--
      Font family: Roboto
      Line height: 19sp
      (identical to box height)
    -->
</RelativeLayout>


