<?xml version="1.0" encoding="utf-8"?>
<!-- Android - 4 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary">
    <!-- Rectangle 4 -->

    <!-- Beranda -->

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="-16dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/beranda"
        android:layout_width="70dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:text="@string/beranda"
        android:textAppearance="@style/beranda" />
    <!-- image 2 -->
    <Button
        android:id="@+id/image_2"
        android:layout_width="21dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/ic_menu_black_24dp" />

    <!-- Rectangle 5 -->
    <View
        android:id="@+id/rectangle_5"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorPrimaryDark" />

    <!-- image 3 -->
    <View
        android:id="@+id/image_3"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/image3penjualan" />

    <!-- Penjualan -->

    <!-- 19 Des 2019 -->

    <TextView
        android:id="@+id/penjualan"
        android:layout_width="57dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="59dp"
        android:gravity="top"
        android:text="@string/penjualan"
        android:textAppearance="@style/penjualan" />

    <TextView
        android:id="@+id/des_2019"
        android:layout_width="73dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="81dp"
        android:gravity="top"
        android:text="@string/des_2019"
        android:textAppearance="@style/des_2019" />

    <Button
        android:id="@+id/kelolajajan"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_below="@+id/rectangle_5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/image4penjualan"/>

    <Button
        android:id="@+id/dompet"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_below="@+id/rectangle_5"
        android:layout_marginStart="134dp"
        android:layout_marginTop="54dp"
        android:layout_toEndOf="@+id/kelolajajan"
        android:background="@drawable/image5penjualan" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kelolajajan"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Kelola Jajanan Pasar"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtjajan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kelolajajan"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Kelola Jajanan Pasar"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dompet"
        android:layout_marginStart="99dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/txtjajan"
        android:gravity="center"
        android:text="Transaksi"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/kelolajajan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="434dp"
        android:text="JUAL!"
        android:background="#C5F3C7"/>

    <!-- Rp. 150.000 -->
    <TextView
        android:id="@+id/rp_150_000"
        android:layout_width="70dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="266dp"
        android:layout_marginTop="69dp"
        android:gravity="top"
        android:text="@string/rp_150_000"
        android:textAppearance="@style/rp_150_000" />

    <!--
      Font family: Roboto
      Line height: 15sp
    -->

    <!--
      Font family: Roboto
      Line height: 15sp
    -->
</RelativeLayout>